--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html lang="en">
     <head>
         <title>Search</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <form action="https://google.com/search">
-            <input type="text" name="q">
-            <input type="submit" value="Google Search">
-        </form>
+        <div class="top">
+            <a href="img_search.html">Image search</a>
+            <br/>
+            <a href="adv_search.html">Advanced search</a>
+            <br/>
+        </div>
+        <div>
+            <form action="https://google.com/search">
+                <input type="text" name="q">
+                <input type="submit" value="Google Search">
+            </form>
+        </div>
     </body>
 </html>
