Styles and links  opdateret

--- a/adv_search.html
+++ b/adv_search.html
@@ -2,11 +2,27 @@
 <html lang="en">
     <head>
         <title>Search</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <div class="top">
+            <a href="index.html">Google search</a>
+        </div>
         <form action="https://google.com/advanced_search">
             <input type="text" name="q">
             <input type="submit" value="Google Search">
         </form>
+
+        <div>
+            Query Advanced. On the Google Advanced Search page, the user should be able to provide input for the following four fields (taken from Google’s own advanced search options)
+            <br/>
+            <ul>
+                <li>Find pages with… “all these words:” </li>
+                <li>Find pages with… “this exact word or phrase:”</li>
+                <li>Find pages with… “any of these words:”</li>
+                <li>Find pages with… “none of these words:”</li>
+            </ul>
+        </div>
+
     </body>
 </html>
