--- a/img_search.html
+++ b/img_search.html
@@ -2,9 +2,13 @@
 <html lang="en">
     <head>
         <title>Search</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <form action="https://google.com/imghp">
+        <div class="top">
+            <a href="index.html">Google search</a>
+        </div>
+        <form action="https://www.google.com/search?tbm=isch">
             <input type="text" name="q">
             <input type="submit" value="Google Search">
         </form>
