Start new CSS udgave

--- a/adv_search.html
+++ b/adv_search.html
@@ -7,22 +7,43 @@
     <body>
         <div class="top">
             <a href="index.html">Google search</a>
-        </div>
-        <form action="https://google.com/advanced_search">
-            <input type="text" name="q">
-            <input type="submit" value="Google Search">
+        </div class="hoved">
+        <div class="Mza7yc">
+        <form action="https://google.com/search">
+            <div class="yIQOUb">
+                <div class="FAcADc"> 
+                    <div class="lOTAE"> 
+                        <label for="xX4UFf">alle disse ord:</label>
+                    </div> 
+                </div> 
+                <div class="jYcx0e"> 
+                    <div class="PLLUQc"> 
+                        <input class="jfk-textinput" value="" autofocus="autofocus" id="xX4UFf" name="as_q" type="text"> 
+                    </div> 
+                </div> 
+                <div class="cwqNnb dulCv"> 
+                    <div class="lOTAE">
+                        Skriv de vigtige ord:  
+                        <span class="BFlQMb">trefarvet rotteterrier</span>   
+                    </div> 
+                </div> 
+            </div>
+
+            <label for="all">all these words: </label>
+            <input type="text" name="as_q"></br>
+            <label for="with">this exact word or phrase: </label>
+            <input type="text" name="as_epq"></br>
+            <label for="any">any of these words: </label>
+            <input type="text" name="as_oq"></br>
+            <label for="non">none of these words: </label>
+            <input type="text" name="as_eq"></br>
+            <div class="yIQOUb">
+                <div class="FAcADc"></div>
+                <div class="jYcx0e" style="text-align:right">
+                    <input class="jfk-button jfk-button-action" style="user-select:none;line-height:100%;height:30px;min-width:120px" type="submit" value="Avanceret søgning">
+                </div>
         </form>
-
-        <div>
-            Query Advanced. On the Google Advanced Search page, the user should be able to provide input for the following four fields (taken from Google’s own advanced search options)
-            <br/>
-            <ul>
-                <li>Find pages with… “all these words:” </li>
-                <li>Find pages with… “this exact word or phrase:”</li>
-                <li>Find pages with… “any of these words:”</li>
-                <li>Find pages with… “none of these words:”</li>
-            </ul>
         </div>
-
+       
     </body>
 </html>
