--- a/index.html
+++ b/index.html
@@ -7,14 +7,19 @@
     <body>
         <div class="top">
             <a href="img_search.html">Image search</a>
-            <br/>
             <a href="adv_search.html">Advanced search</a>
             <br/>
         </div>
-        <div>
+        <div class="hoved">
             <form action="https://google.com/search">
-                <input type="text" name="q">
-                <input type="submit" value="Google Search">
+                <div>
+                    <input class="RNN" type="text" name="q">
+                </div>
+                <div class="FPdoLc lJ9FBC">
+                    <input type="submit" name="btnK" value="Google Search">
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+                    <input type="submit" name="btnI" value="Jeg prøver lykken">
+                </div>
             </form>
         </div>
     </body>
