--- a/img_search.html
+++ b/img_search.html
@@ -7,10 +7,18 @@
     <body>
         <div class="top">
             <a href="index.html">Google search</a>
+            <br/>
         </div>
-        <form action="https://www.google.com/search?tbm=isch">
-            <input type="text" name="q">
-            <input type="submit" value="Google Search">
-        </form>
+        <div class="hoved">
+            <form action="https://www.google.com/search">  <!-- https://www.google.com/search?tbm=isch&q=harvard -->
+                <div>
+                    <input class="RNN" type="text" name="q">
+                </div>
+                <div class="FPdoLc lJ9FBC"></div>
+                    <input type="hidden" name="tbm" value="isch">
+                    <input type="submit" value="Google Search">
+                </div>
+            </form>
+        </div>
     </body>
 </html>
