Rettet de fleste css

--- a/img_search.html
+++ b/img_search.html
@@ -13,9 +13,9 @@
         <div class="hoved">
             <form action="https://www.google.com/search">  <!-- https://www.google.com/search?tbm=isch&q=harvard -->
                 <div>
-                    <input class="RNN" type="text" name="q">
+                    <input class="inp-search" type="text" name="q">
                 </div>
-                <div class="FPdoLc lJ9FBC"></div>
+                <div class="sub-search"></div>
                     <input type="hidden" name="tbm" value="isch">
                     <input type="submit" value="Google Search">
                 </div>
