--- a/index.html
+++ b/index.html
@@ -2,21 +2,22 @@
 <html lang="en">
     <head>
         <title>Search</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <div class="top">
             <a href="img_search.html">Image search</a>
+            &nbsp;
             <a href="adv_search.html">Advanced search</a>
             <br/>
         </div>
         <div class="hoved">
             <form action="https://google.com/search">
                 <div>
-                    <input class="RNN" type="text" name="q">
+                    <input class="inp-search" type="text" name="q">
                 </div>
-                <div class="FPdoLc lJ9FBC">
+                <div class="sub-search">
                     <input type="submit" name="btnK" value="Google Search">
                     &nbsp;&nbsp;&nbsp;&nbsp;
                     <input type="submit" name="btnI" value="Jeg prøver lykken">
