--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="sub-search">
                     <input type="submit" name="btnK" value="Google Search">
                     &nbsp;&nbsp;&nbsp;&nbsp;
-                    <input type="submit" name="btnI" value="Jeg prøver lykken">
+                    <input type="submit" name="btnI" value="I’m Feeling Lucky">
                 </div>
             </form>
         </div>
