--- a/img_search.html
+++ b/img_search.html
@@ -11,7 +11,7 @@
             <br/>
         </div>
         <div class="hoved">
-            <form action="https://www.google.com/search">  <!-- https://www.google.com/search?tbm=isch&q=harvard -->
+            <form action="https://www.google.com/search">  
                 <div>
                     <input class="inp-search" type="text" name="q">
                 </div>
